Adding JDBC codes

--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="sqlite-jdbc-3.34.0.jar"/>
+	<classpathentry kind="lib" path="junit-4.13.2.jar"/>
+	<classpathentry kind="lib" path="hamcrest-core-1.3.jar"/>
+	<classpathentry kind="src" path="test/chat"/>
+	<classpathentry excluding="chat/" kind="src" path="test"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
