--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
 </dependencies>
 
 </project>
