--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,5 @@ hs_err_pid*
 replay_pid*
 server.db
 projectdemo.mp4
-sqlite-tools-win-x64-3450200/*.exe
+sqlite-tools-win-x64-3450200/
+sqlite-tools-win-x64-3450200/*
